--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,138 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+    <html>
+    <head>
+        <style>
+
+    #alt1{
+        text-align: center;
+        font-size: 20px;
+        color: white;
+    }
+    
+    #baslik1{
+        font-size: 50px;
+    }
+    p.metin1{
+        font-size: 45px;
+        text-align: center;
+    }
+
+    #baslık{
+        text-align: center;
+        font-size: 50px;
+        color: white;
+        margin-top: 0px;
+    }        
+    #sol{
+        width: 300px;   
+        height:1800px;
+       
+        margin-top: 100px;
+        margin-left:0px;
+        position: absolute;
+    }
+    #ust{
+        
+        height:185px;
+        background: linear-gradient(#1f263a,#2b3c6d);
+        
+    }   
+    #orta{
+       background-color: white;
+       width:1250px ;
+       height:1700px;
+       margin-top:50px;
+       margin-left:450px;
+       position: absolute;
+
+    }
+    #alt{
+        position:absolute;
+        height: 100px;
+        width:100%;
+        margin-left: 0px;
+        margin-top:1800px;
+        background: linear-gradient(#1f263a,#2b3c6d);
+    }
+    a{
+        color:white;
+        text-decoration: none;
+        font-size:20px;
+    }
+    ul{
+        
+        list-style-type: none;
+        list-style-position:inside;
+    }
+    li{
+        border-style: solid;
+        font-size: 20px;
+        border-left-width: 30px;    
+        border-bottom:0px;
+        border-left-color: rgb(89, 119, 124);
+        border-right-color: rgb(88, 100, 102);
+        margin-top: 0px;
+        width: 200px;   
+        height: 55px;
+        background: #1f263a;
+        padding: 35px;
+        text-align: justify-all;
+        color: white;
+    }
+    li:hover{
+
+        border-style: solid;
+        font-size: 18 px;   
+        border-bottom:0px;
+        border-left-color: rgb(89, 119, 124);
+        border-right-color: rgb(88, 100, 102);
+        margin-top: 0px;
+        width: 200px;   
+        height: 50px;
+        background:#2b3c6d;
+        padding: 35px;
+        text-align: justify-all;
+        color: white;
+
+    }   
+
+
+        </style>    
+    </head>
+    <body>
+        <div id="ust"><h1 id="baslık"><br><a href="giris.html">İnternet Teknolojileri </a></h1></div>
+        <div id="orta">
+            <h1 id="baslik1">JavaScript Nedir?</h1>
+            <p class ="metin1">JavaScript, yaygın olarak web tarayıcılarında kullanılan dinamik bir script dilidir. Etkileşimli ve dinamik web sayfaları oluşturmaya imkan sağlar. Yazım şekli ve ismi gereği Javaya benzemesinden dolayı sürekli karıştırılıyor olsalarda aslında JavaScript ve Java birbirinden farklı teknolojilerdir. Java nedir konusuna ilerleyen zamanlarda açıklık getireceğim.</p>
+            <p class ="metin1">JavaScript günümüzde gelişmiş olan tüm web sitelerinin neredeyse tamamında kullanılmaktadır. JavaScript web sitelerinin dinamik olmasını ve işlevselliğinin artmasını sağlar. Kullanıcı taraflı ve sunucu taraflı çalışabilir. Web sitelerinin kullanıcılar ile iletişim kurmasına yardımcı olur.</p>
+            <p class ="metin1">Örnek vermek gerekirse, bir web sitesinde form doldururken eksik veya hatalı giriş yaptığımızda uyarı veren veya bir girişe tepki olarak ekranda bulunan bir bilgiyi değiştiren JavaScripttir. Tabiki bu verdiğim örnekler JavaScriptin yapabildiklerinin binde biridir.</p>
+            <p class ="metin1">JavaScript dosyalarının uzantısı  şeklindedir.</p>
+             </div>
+    <div id="sol">
+        <ul>
+            <li><a href="javaScript.html">JavaScript Giriş</a></li>
+            <li><a href="yazılımyapısı.html">JavaScript Yazılım yapısı</a></li>
+            <li><a href="degiskenler.html">Değişkenler</a></li>
+            <li><a href="operatörler.html">Operatörler</a></li>
+            <li><a href="aritmetik.html">Aritmetik</a></li>
+            <li><a href="veritipleri.html">Veri Tipleri</a></li>
+            <li><a href="fonksiyonyapisi.html">Fonksiyon Yapısı</a></li>
+            <li><a href="olaylar.html">Olaylar (Events)</a></li>
+            <li><a href="stringler.html">Stringler, Sayılar, Diziler</a></li>
+            <li><a href="ifkosul.html">If koşul yapıları</a></li>
+            <li><a href="döngüler.html">Döngüler</a></li>
+            <li><a href="tipdönüsümleri.html">Tip Dönüşümleri</a></li>
+            <li><a href="calismayapisi.html">Çalışma yapısı ve genel mimarisi</a></li>
+        </ul>
+    </div>
+
+        <div id="alt"> <p id="alt1">
+           Tasarımcı: Yusuf Öztürk .CopyRight 2020 Tüm Hakları saklıdır.
+        </p>
+
+
+        </div>
+    </div>
+
+
+    </body>
